<resources>
    <string name="app_name">Intent</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity Dengan Data</string>
    <string name="move_with_object">Pindah Activity Dengan Object</string>
    <string name="dial_number">Dial Number</string>
    <string name="move_with_result">Pindah Activity Untuk Hasil</string>
    <string name="result_from_activity">Hasil Dari Activity</string>
    <string name="choose_number">Pilih Angka Yang Kamu Suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_receiced">Data Diterima</string>
    <string name="object_receiced">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="back">Kembali</string>
</resources>