<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity_data">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="250dp"
        android:backgroundTint="#00b4d8"
        android:text="@string/back"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_below="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_number"
        android:textSize="20dp"/>

    <RadioButton
        android:id="@+id/choose1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_50"/>

    <RadioButton
        android:id="@+id/choose2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_100"/>

    <RadioButton
        android:id="@+id/choose3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_150"/>

    <RadioButton
        android:id="@+id/choose4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_150"/>

    </RadioGroup>

</RelativeLayout>